GNOME Bugzilla – Bug 762092
Window disappears after changing language
Last modified: 2016-02-16 14:07:10 UTC
In recent Continuous images (say for the past two weeks), if I change the language on a freshly created VM, the gnome-initial-setup window disappears. As if it crashed or something. I can workaround it by forcefully shutting the VM down and restarting. It remembers (!) my earlier choice I see the window again.