accounts: Fix a crash on changing language

The recent refactoring of small-screen handling caused this;
make it simpler by just using a binding, as we do in other pages.

https://bugzilla.gnome.org/show_bug.cgi?id=762092